  but is created as part of the build process under lib/<toolkit>/wx/include
  where <toolkit> is of the form (msw|univ)[dll][u][d]. You'll need to update
  the include path in your make/project files appropriately.

- child frames appear in the taskbar by default now, use wxFRAME_NO_TASKBAR
  style to avoid it, wxFRAME_FLOAT_ON_PARENT style is now obsolete and has no
  effect

Unix ports:

- You should use `wx-config --cxxflags` in your makefiles instead of
  `wx-config --cflags` for compiling C++ files. CXXFLAGS contains CFLAGS
  and the compiler flags for C++ files only, CFLAGS should still be used
  to compile pure C files.


OTHER CHANGES
=============

2.3.3
-----

wxBase:

- fixes to the command line parsing error and usage messages
- modified wxFileName::CreateTempFileName() to open the file atomically
  (if possible) and, especially, not to leak the file descriptors under Unix
- memory leak in wxHTTP fixed (Dimitri)
- fixes to AM_PATH_WXCONFIG autoconf macro

Unix (Base/GUI):

- wxWindows may be built using BSD and Solaris (and possibly other) make
  programs and not only GNU make

All (GUI):

- significantly improved native font support
- added IFF image handler
- fixed using custom renderers in wxGrid which was broken in 2.3.2
- support for multiple images in one file added to wxImage (TIFF and ICO formats)
- support for CUR and ANI files in wxImage added (Chris Elliott)
- wxTextCtrl::GetRange() added
- added wxGetFontFromUser() convenience function

wxMSW:

- small appearance fixes for native look under Windows XP
- huge (40*) speed up in wxMask::Create() (=> much faster toolbar creation)
- fixed flicker in wxTreeCtrl::SetItemXXX()
- fixed redraw problems in dynamically resized wxStaticText
- improvements to wxWindows applications behaviour when the system colours
  are changed
- fixed wxProgressDialog for ranges > 65535
- wxFontEnumerator now returns all fonts, not only TrueType ones
- bugs in handling wxFrame styles (border/caption related) fixed